# zeno-ui

./: Cargo.toml
.trae/documents/: compose-cross-platform-ui-architecture-plan.md  native-ui-framework-architecture-plan.md  zeno-ui-architecture-performance-plan.md
.trae/rules/: documentation-sync.md  error-codes-first.md  modifier-first.md  unified-logging-entry.md  verification-zero-warning.md
crates/zeno-backend-impeller/: Cargo.toml
crates/zeno-backend-impeller/src/: backend.rs  lib.rs  macos_metal.rs  renderer.rs
crates/zeno-backend-impeller/src/macos_metal/: display_list_renderer.rs  draw.rs  layer_renderer.rs  offscreen.rs  pipeline.rs  scissor.rs  shaders.rs  text.rs
crates/zeno-backend-impeller/src/macos_metal/display_list_renderer/: cache.rs  context.rs  helpers.rs  item.rs  lookups.rs  scope.rs
crates/zeno-backend-skia/: Cargo.toml
crates/zeno-backend-skia/src/: backend.rs  canvas.rs  lib.rs  real.rs  renderer.rs  stub.rs
crates/zeno-backend-skia/src/canvas/: draw.rs  effects.rs  image.rs  layer.rs  mapping.rs  mod.rs  text.rs
crates/zeno-compose/: Cargo.toml
crates/zeno-compose/src/: invalidation.rs  layout.rs  lib.rs  modifier.rs  node.rs  render.rs  style.rs  tree.rs  widgets.rs
crates/zeno-compose/src/render/: fragments.rs  patch.rs  reconcile.rs  relayout.rs  scene.rs
crates/zeno-compose/src/render/patch/: collect.rs  diff.rs  update.rs
crates/zeno-compose/src/tests/: mod.rs  modifiers.rs  smoke.rs
crates/zeno-compose/src/tests/engine/: cache.rs  patch.rs
crates/zeno-compose/src/tree/: dirty_roots.rs  retained.rs  tests.rs
crates/zeno-compositor/: Cargo.toml
crates/zeno-compositor/src/: composite.rs  damage.rs  frame.rs  lib.rs  planner.rs  scheduler.rs  tests.rs  tile.rs
crates/zeno-core/: Cargo.toml
crates/zeno-core/src/: backend.rs  color.rs  config.rs  error.rs  error_code.rs  geometry.rs  lib.rs  logging.rs  platform.rs
crates/zeno-foundation/: Cargo.toml
crates/zeno-foundation/src/: id.rs  lib.rs
crates/zeno-foundation/src/containers/: box.rs  column.rs  container.rs  mod.rs  row.rs  spacer.rs
crates/zeno-foundation/src/controls/: button.rs  checkbox.rs  common.rs  mod.rs  scroll.rs  switch.rs  tests.rs  toggle.rs
crates/zeno-foundation/src/layout/: mod.rs
crates/zeno-foundation/src/text/: mod.rs  text.rs
crates/zeno-graphics/: Cargo.toml
crates/zeno-graphics/src/: capabilities.rs  lib.rs  renderer.rs  scene.rs  surface.rs
crates/zeno-platform/: Cargo.toml
crates/zeno-platform/src/: android.rs  desktop.rs  desktop_session.rs  event.rs  ios.rs  lib.rs  mobile.rs  presenter.rs  session.rs  shell.rs  window.rs
crates/zeno-platform/src/desktop_session/: impeller_metal.rs  scene.rs  session_plan.rs  skia_gl.rs
crates/zeno-platform/src/mobile/: protocol.rs  render_session.rs  session_plan.rs  shell_host.rs  tests.rs
crates/zeno-platform/src/platform/: android.rs  ios.rs  linux.rs  windows.rs
crates/zeno-platform/src/session/: backend_resolver.rs  descriptor.rs
crates/zeno-platform/src/window/: runtime.rs
crates/zeno-runtime/: Cargo.toml
crates/zeno-runtime/src/: frame_scheduler.rs  lib.rs  resolver.rs  session.rs
crates/zeno-runtime/src/animation/: mod.rs
crates/zeno-runtime/src/app/: mod.rs
crates/zeno-runtime/src/host/: app_host.rs  mod.rs  ui_runtime.rs
crates/zeno-runtime/src/input/: mod.rs
crates/zeno-runtime/src/lifecycle/: mod.rs
crates/zeno-scene/: Cargo.toml
crates/zeno-scene/src/: capabilities.rs  display_list.rs  lib.rs  renderer.rs  retained_scene.rs  scene.rs  surface.rs
crates/zeno-shell/: Cargo.toml
crates/zeno-shell/src/: desktop_session.rs  lib.rs  mobile.rs  shell.rs  window.rs
crates/zeno-shell/src/desktop_session/: impeller_metal.rs  mod.rs  plan.rs  scene.rs  skia_gl.rs
crates/zeno-shell/src/mobile/: mod.rs  plan.rs  sessions.rs  shells.rs  tests.rs  types.rs
crates/zeno-shell/src/platform/: android.rs  ios.rs  macos.rs
crates/zeno-shell/src/window/: app.rs  mod.rs
crates/zeno-text/: Cargo.toml
crates/zeno-text/src/: cache.rs  font.rs  lib.rs  shaper.rs  system.rs  types.rs
crates/zeno-ui/: Cargo.toml
crates/zeno-ui/src/: binding.rs  image.rs  lib.rs  style.rs  text_style.rs  tree.rs
crates/zeno-ui/src/frontend/: dirty_table.rs  mod.rs  object_table.rs
crates/zeno-ui/src/gesture/: mod.rs
crates/zeno-ui/src/layout/: arena.rs  geometry.rs  mod.rs  relayout.rs  work_queue.rs  work_queue_engine.rs  work_queue_tasks.rs
crates/zeno-ui/src/modifier/: mod.rs
crates/zeno-ui/src/node/: mod.rs
crates/zeno-ui/src/render/: debug.rs  display_list.rs  fragments.rs  mod.rs  patch.rs  reconcile.rs  relayout.rs  scene.rs
crates/zeno-ui/src/render/patch/: collect.rs  diff.rs  update.rs
crates/zeno-ui/src/semantics/: mod.rs
crates/zeno-ui/src/tests/: engine.rs  layers.rs  mod.rs  modifiers.rs  smoke.rs
crates/zeno-ui/src/tests/engine/: cache.rs  display_list.rs  patch.rs
crates/zeno-ui/src/tree/: dirty_roots.rs  indexing.rs  retained.rs  tests.rs
docs/architecture/: README.md  backend-selection.md  compose-layer.md  desktop-rendering.md  display-list-compositor.md  error-codes.md  impeller-desktop.md  logging.md  performance-debugging.md  performance-plan.md  platform-shell.md  rendering-architecture.md  roadmap.md
docs/packaging/: SDK_PACKAGING.md
examples/bench_gallery/: Cargo.toml
examples/bench_gallery/src/: main.rs
examples/minimal_app/: Cargo.toml
examples/minimal_app/src/: main.rs
examples/text_probe/: Cargo.toml
examples/text_probe/src/: main.rs
scripts/: package-all.sh  package-android.sh  package-desktop.sh  package-ios.sh  package-linux.sh  package-windows.sh  run-bench-suite.sh
src/: lib.rs  ui_runtime.rs
