[workspace]
members = [
    ".",
    "crates/zeno-core",
    "crates/zeno-graphics",
    "crates/zeno-runtime",
    "crates/zeno-shell",
    "crates/zeno-backend-skia",
    "crates/zeno-backend-impeller",
    "crates/zeno-text",
    "examples/minimal_app",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["zeno-ui"]

[package]
name = "zeno-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeno-core = { path = "crates/zeno-core" }
zeno-graphics = { path = "crates/zeno-graphics" }
zeno-runtime = { path = "crates/zeno-runtime" }
zeno-shell = { path = "crates/zeno-shell" }
zeno-text = { path = "crates/zeno-text" }
