[workspace]
members = [
    "crates/zeno-compositor",
    "crates/zeno-ui",
    "crates/zeno-core",
    "crates/zeno-foundation",
    "crates/zeno-scene",
    "crates/zeno-runtime",
    "crates/zeno-platform",
    "crates/zeno-backend-skia",
    "crates/zeno-backend-impeller",
    "crates/zeno-text",
    "examples/bench_gallery",
    "examples/minimal_app",
    "examples/text_probe",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["zeno-ui"]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
