[package]
name = "zeno-backend-impeller"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeno-core = { path = "../zeno-core" }
zeno-scene = { path = "../zeno-scene" }
zeno-text = { path = "../zeno-text" }

[target.'cfg(target_os = "macos")'.dependencies]
font-kit = "0.14"
fontdue = "0.9"
metal = "0.33.0"
