[package]
name = "zeno-backend-skia"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeno-core = { path = "../zeno-core" }
zeno-scene = { path = "../zeno-scene" }
zeno-text = { path = "../zeno-text" }

[dependencies.skia-safe]
version = "0.93"
optional = true
default-features = false
features = ["textlayout"]

[features]
native_skia = ["skia-safe"]
