[package]
name = "zeno-backend-skia"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeno-core = { path = "../zeno-core" }
zeno-scene = { path = "../zeno-scene" }
zeno-text = { path = "../zeno-text" }

[dependencies.skia-safe]
version = "0.93"
optional = true
features = []

[features]
# Keep upstream defaults (binary-cache/pdf/embed-icudtl, etc.) and expose
# zeno-backend-skia's native capability set through a single feature.
native_skia = ["skia-safe", "skia-safe/textlayout"]
