[package]
name = "zeno-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeno-backend-impeller = { path = "../zeno-backend-impeller" }
zeno-backend-skia = { path = "../zeno-backend-skia", features = ["native_skia"] }
zeno-core = { path = "../zeno-core" }
zeno-scene = { path = "../zeno-scene" }
zeno-text = { path = "../zeno-text" }

[dependencies.winit]
version = "0.30.13"
optional = true

[dependencies.gl]
version = "0.14"
optional = true

[dependencies.glutin]
version = "0.32"
optional = true

[dependencies.glutin-winit]
version = "0.5"
optional = true

[dependencies.raw-window-handle]
version = "0.6"
optional = true

[dependencies.skia-safe]
version = "0.93"
optional = true
features = ["gl"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics-types = "0.2"
metal = "0.33.0"

[features]
default = []
desktop_winit = [
    "winit",
    "gl",
    "glutin",
    "glutin-winit",
    "raw-window-handle",
    "skia-safe",
]
mobile_android = []
mobile_ios = []
