[package]
name = "zeno-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeno-backend-impeller = { path = "../zeno-backend-impeller" }
zeno-backend-skia = { path = "../zeno-backend-skia", features = ["real_skia"] }
zeno-core = { path = "../zeno-core" }
zeno-graphics = { path = "../zeno-graphics" }

[dependencies.winit]
version = "0.30.13"
optional = true

[dependencies.gl]
version = "0.14"
optional = true

[dependencies.glutin]
version = "0.32"
optional = true

[dependencies.glutin-winit]
version = "0.5"
optional = true

[dependencies.raw-window-handle]
version = "0.6"
optional = true

[dependencies.skia-safe]
version = "0.93"
optional = true
features = ["gl", "textlayout"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics-types = "0.2"
metal = "0.33.0"

[features]
default = []
desktop_winit = [
    "winit",
    "gl",
    "glutin",
    "glutin-winit",
    "raw-window-handle",
    "skia-safe",
]
