[package]
name = "minimal_app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeno-ui = { path = "../..", features = ["desktop_demo"] }
zeno-shell = { path = "../../crates/zeno-shell", features = ["desktop_winit"] }
zeno-text = { path = "../../crates/zeno-text" }
